# pathtracer

./: .gitignore  CMakeLists.txt  Config.h  Geometries.h  Light.h  OptiXRenderer.vcxproj  OptiXRenderer.vcxproj.filters  PinholeCamera.cu  README.md  RayTracer.cu  Renderer.cpp  Scene.h  SceneLoader.cpp  cmake_install.cmake  
CMake/: CMakeCache.txt
CMake/CSE-168-OptiX-Soln/: CMakeLists.txt
CMake/CSE-168-OptiX-Soln/CSE-168-OptiX-Soln/: CMakeLists.txt  CSE-168-OptiX-Soln.cpp  CSE-168-OptiX-Soln.h
OptiXRenderer/: CMakeLists.txt  Camera.h  Common.cu  Config.h  Geometries.h  Light.h  Payloads.h  PinholeCamera.cu  RayTracer.cu  Renderer.cpp  Renderer.h  Scene.h  SceneLoader.cpp  Sphere.cu  Triangle.cu  main.cpp  main.h
OptiXRenderer.dir/Debug/: OptiXRenderer.exe.recipe
OptiXRenderer.dir/Debug/OptiXRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  OptiXRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scenes/hw2/: analytic.test
Scenes/hw4/: cornellRefract.test  cornellRefractTest.test  dragonRefract.test  mis.test
Scenes/scene 3/: cornellRR.test
Scenes/scene 4/: cornellRefract.test  cornellVolume.test  dragon.test  dragonRefract.test  mis.test
