# CMakeList.txt : CMake project for CSE-168-OptiX-Soln, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CSE-168-OptiX-Soln "CSE-168-OptiX-Soln.cpp" "CSE-168-OptiX-Soln.h")

# TODO: Add tests and install targets if needed.
